# pytorch2.0_ttnn

./: .gitignore  check.py  forward_pass.py  ops.txt  pyproject.toml
.github/workflows/: publish.yml
pytorch2.0_ttnn/: setup.py
pytorch2.0_ttnn/.github/workflows/: publish.yml
pytorch2.0_ttnn/tests/cpp_extension/: test_GELU_cpp_extension.py
pytorch2.0_ttnn/torch_ttnn/cpp_extension/: CMakeLists.txt  build_cpp_extension.sh  setup.py
pytorch2.0_ttnn/torch_ttnn/cpp_extension/ttnn_cpp_extension/include/ttnn_cpp_extension/ops/: attn.hpp  creation.hpp  dropout.hpp  linear.hpp  norm.hpp  unary.hpp  utils.hpp
pytorch2.0_ttnn/torch_ttnn/cpp_extension/ttnn_cpp_extension/src/: open_registration_extension.cpp
pytorch2.0_ttnn/torch_ttnn/cpp_extension/ttnn_cpp_extension/src/ops/: attn.cpp  dropout.cpp  linear.cpp  norm.cpp  unary.cpp  utils.cpp
