[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-ttnn"
version = "0.5.0"
description = "PyTorch dynamo backend for Tenstorrent TT-NN framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tenstorrent", email = "info@tenstorrent.com" }]
keywords = ["torch", "ttnn", "pytorch2.0", "tenstorrent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
  "torch>=2.0",
  "torchvision>=0.17",
  "tabulate>=0.9.0",
  "networkx>=3.1",
  "graphviz",
  "matplotlib>=3.7.1",
  "paramiko>=3.5.1"
]

[project.optional-dependencies]
ttnn-linux = [
  "ttnn @ https://github.com/tenstorrent/tt-metal/releases/download/v0.59.0-rc15/ttnn-0.59.0rc15-cp310-cp310-linux_x86_64.whl ; python_version == '3.10' and sys_platform == 'linux'"
]

[tool.setuptools.packages.find]
where = ["src"]
